--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,11 +8,32 @@
     display: flex;
 }
 .header-item h1{
-    margin-left: 50px;
+    margin-left: 100px;
     margin-right: 100px;
+    color: #9873FF;
+    font-weight: bolder;
 }
 .header-item nav{
     display: flex;
     justify-content: space-evenly;
+    margin-top: 11px;
     margin-left: 50px;
+}
+.header-item nav p a{
+    margin-bottom: 0;
+    margin-left: 50px;
+    text-decoration: none;
+    font-size: larger;
+    font-weight: bolder;    
+}
+/*btn style header-container btn */
+.header-container button{
+    color: whitesmoke;
+    background: linear-gradient(90deg, #7E90FE 0%, #9873FF 100%);
+    font-size: 24px;
+    width: 190px;
+    height: 65px;
+    margin-right: 150px;
+    border: none;
+    border-radius: 10px;
 }
