--- a/src/components/JobShow/JobShow.css
+++ b/src/components/JobShow/JobShow.css
@@ -2,8 +2,9 @@
     /* margin:auto ;
     display: block; */
     margin-left: 150px;
-    margin-right: 0px;
-    width:400px;
+    margin-right: 50px;
+    padding: 40px;
+    width:500px;
     height: 300px;
     background: linear-gradient(90deg, rgba(126, 144, 254, 0.05) 0%, rgba(152, 115, 255, 0.05) 100%);
 }
