--- a/src/components/PeopleShow/PeopleShow.css
+++ b/src/components/PeopleShow/PeopleShow.css
@@ -3,6 +3,7 @@
     justify-content: space-between;
     margin-left: 100px;
     margin-right: 150px;
+    margin-bottom: 100px;
 }
 .people-left h1{
     font-family: 'Manrope';
@@ -13,11 +14,24 @@
 .people-left h1 span{
     color:  #9873FF;
 }
+.people-left p{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: x-large;
+}
+.people-left button{
+    color: whitesmoke;
+    background: linear-gradient(90deg, #7E90FE 0%, #9873FF 100%);
+    font-size: 20px;
+    width: 190px;
+    height: 65px;
+    border: none;
+    border-radius: 10px;
+}
 .people-item-img-con{
     background-image: url('../../../public/img/importent/Vector-1.png');
     background-repeat: none;
 }
 .people-item-img-con img{
-    width: 416px;
-    height: 404px;
+    width: 600px;
+    height: 520px;
 }
