--- a/src/components/Featured/Featured.css
+++ b/src/components/Featured/Featured.css
@@ -9,10 +9,14 @@
   text-align: center;
 }
 .jobs-container{
+    margin-left: 150px;
+    margin-right: 100px;
+    margin-bottom: 80px;
+    display: flex;
+    justify-content: center;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 20px;
-    justify-content: center;
 }
 .see-all-btn{
     color: whitesmoke;
@@ -20,7 +24,6 @@
     font-size: 24px;
     width: 190px;
     height: 65px;
-    margin-top: 50px;
     margin: auto;
     display: block;
     border: none;
