--- a/src/components/JobCategory/JobCategory.css
+++ b/src/components/JobCategory/JobCategory.css
@@ -13,17 +13,24 @@
     flex-direction: row;
     justify-content: space-evenly;
 }
+.above-part-img-heading{
+    margin-top: 20px;
+    margin-left: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
 .category-item{
-    width: 210px;
-    height: 190px;
-    padding-left: 40px;
-    padding-top: 40px;
-    padding-right: 0px;
+    height: 200px;
+    width: 250px;
+    margin-top: 30px;
     background: linear-gradient(90deg, rgba(126, 144, 254, 0.05) 0%, rgba(152, 115, 255, 0.05) 100%);
-    border: 1px solid salmon; 
     border-radius: 10px;
 }
-.category-item img{
+.above-part-img-heading img{
+    padding: 7px;
+    background-color: rgb(231, 194, 241);
     max-width: 30px;
-    max-height: 350px;
+    max-height: 35px;
+    border-radius: 3px;
 }
