--- a/src/components/JobShow/JobShow.css
+++ b/src/components/JobShow/JobShow.css
@@ -1,16 +1,14 @@
 .every-job-item{
-    /* margin:auto ;
-    display: block; */
-    margin-left: 150px;
-    margin-right: 50px;
-    padding: 40px;
-    width:500px;
-    height: 300px;
+    position: relative;
+    padding:45px;
+    width: 400px;
+    height: 260px;
+    border-radius: 10px;
     background: linear-gradient(90deg, rgba(126, 144, 254, 0.05) 0%, rgba(152, 115, 255, 0.05) 100%);
 }
 .every-job-item img{
     max-width: 120px;
-    max-height: 40px;
+    max-height: 25px;
 }
 .remote-full{
     border:  1px solid #7E90FE;
@@ -20,6 +18,7 @@
     font-size: 16px;
     color: #7E90FE;
     margin-right: 15px;
+    margin-bottom: 20px;
     padding: 5px 6px;
 }
 .loc-sal{
@@ -28,11 +27,20 @@
 }
 .loc-sal img{
     margin-top: 5px;
-    margin-bottom: 0px;
+    margin-bottom: -5px;
+    margin-right: 10px;
+}
+.btn-view a{
+    text-decoration: none;
+    color: whitesmoke;
 }
 .btn-view{
+    position: absolute;
+    bottom: 10px;
+    text-decoration: none;
     width: 130px;
     height: 50px;
+    margin-top: 20px;
     padding: 1px 7px;
     font-family: 'Manrope';
     font-style: normal;
